--- a/public/css/join.css
+++ b/public/css/join.css
@@ -16,5 +16,9 @@ body {
 }
 
 .common_btn {
-    background-color: pink;
+    background-image: url(/js/e5a690d29360adafc9c9.jpg);
 }
+/*!**********************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./front/css/join.css ***!
+  \**********************************************************************/
+
