네이버로그인중

--- a/front/css/login.css
+++ b/front/css/login.css
@@ -1,1 +1,11 @@
 @import 'common.css';
+
+.sns_box #naver_id_login {
+    background: url('../img/naver/btnG_완성형.png');
+    background-size: 100% 100%;
+}
+
+.sns_box .sns_btn {
+    width: 200px;
+    height: 50px;
+}
