--- a/public/css/login.css
+++ b/public/css/login.css
@@ -17,4 +17,6 @@ body {
 /*!***********************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./front/css/login.css ***!
   \***********************************************************************/
-
+.sns_box #naver_id_login {
+    background: url(/js/4382736d0fcc19a758c7.png);
+}
