이제 npm run build안하고 node run.js실행만하면 프론트 바뀜

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -17,4 +17,6 @@ body {
 /*!**********************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./front/css/home.css ***!
   \**********************************************************************/
-
+div {
+    color: red;
+}
