--- a/front/css/login.css
+++ b/front/css/login.css
@@ -1,11 +1,111 @@
 @import 'common.css';
 
-.sns_box #naver_id_login {
-    background: url('../img/naver/btnG_완성형.png');
+.login-container{
+    width: 100vh;
+    height: 100vh;
+    top:50%;
+    left:50%;
+}
+
+.loginwrap{
+    width: 430px;
+    height: 300px;
+    position: relative;
+    display: flex; 
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+}
+#naverLoginBtn {
+    border: 2px solid rgb(0, 199, 60);
+}
+#naverLoginBtn:hover {
+    background-color: rgb(0, 199, 60);
+    cursor: pointer;
+    box-shadow: 0 4px 16px rgba(7, 7, 7, 0.5);
+    color:rgb(255, 255, 255);
+}
+#kakaoLoginBtn{
+    border: 2px solid rgb(247, 230, 0);
+}
+#kakaoLoginBtn:hover {
+    background-color: rgb(247, 230, 0);
+    cursor: pointer;
+    box-shadow: 0 4px 16px rgba(7, 7, 7, 0.5);
+    color:rgb(0, 0, 0);
+}
+#googleLoginBtn{
+    border: 2px solid rgb(196, 48, 43);
+}
+#googleLoginBtn:hover {
+    background-color: rgb(196, 48, 43);
+    cursor: pointer;
+    box-shadow: 0 4px 16px rgba(7, 7, 7, 0.5);
+    color:rgb(255, 255, 255);
+}
+#facebookLoginBtn{
+    border: 2px solid rgb(59, 89, 152);;
+}
+#facebookLoginBtn:hover {
+    background-color: rgb(59, 89, 152);
+    cursor: pointer;
+    box-shadow: 0 4px 16px rgba(7, 7, 7, 0.5);
+    color:rgb(255, 255, 255);
+}
+
+.sns-btn{
+    position: relative;
+    border-radius: 8px;
+    width: 380px;
+    height: 50px;
+    background-color: rgb(255, 255, 255);
+    margin-left: 2px;
+    box-shadow: 0 4px 16px rgba(172, 166, 166, 0.5);
+}
+
+.sns-btn #naver-icon{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: url('../img/naver/naver_icon.png');
     background-size: 100% 100%;
 }
 
-.sns_box .sns_btn {
-    width: 200px;
+.sns-btn #kakao-icon{
+    position: absolute;
+    width: 50px;
     height: 50px;
+    background: url('../img/kakao/kakao_icon.png');
+    background-size: 100% 100%;
+}
+
+.sns-btn #google-icon{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: url('../img/google/google_icon.png');
+    background-size: 100% 100%;
+}
+
+.sns-btn #facebook-icon{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: url('../img/facebook/facebook_icon.png');
+    background-size: 100% 100%;
+}
+
+.sns-btn .icon-label{
+    width: 140px;
+    height: 50px;
+    position: absolute;
+    padding-left: 60px;
+    font-size: 16px;
+    text-align: right;
+    font-family: sans-serif;
+}
+.sns-btn .login-label{
+    position: absolute;
+    padding-left: 210px;
+    font-size: 16px;
+    font-family: sans-serif;
 }
