--- a/front/css/common.css
+++ b/front/css/common.css
@@ -11,3 +11,92 @@ body {
     background-size: 100% 100%;
     display: none;
 }
+
+.alert_container {
+    position: fixed;
+    z-index: 1060;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0,.4);
+    height: 100%;
+    display: none;
+}
+
+.alert_container.show {
+    display: grid;
+    place-content: center;
+}
+
+.alert_container .alert_box {
+    position: relative;    
+    display: grid;
+    width: 32em;
+    max-width: 100%;
+    padding: 0 0 1.25em;
+    border: none;
+    border-radius: 5px;
+    background: #fff;
+    color: #545454;
+    font-family: inherit;
+    font-size: 1rem;
+    align-self: center;
+    justify-self: center;
+    animation: alert-show .3s;
+}
+
+.alert_box .alert_title {
+    position: relative;
+    max-width: 100%;
+    margin: 0;
+    padding: 0.8em 1em 0;
+    color: inherit;
+    font-size: 1.875em;
+    font-weight: 600;
+    text-align: center;
+    word-wrap: break-word;
+}
+
+.alert_box .alert_btn_box {
+    display: flex;
+    z-index: 1;
+    box-sizing: border-box;
+    flex-wrap: wrap;
+    justify-self: center;
+    align-items: center;
+    width: auto;
+    margin: 1.25em auto 0;
+    padding: 0;
+}
+
+.alert_box .alert_btn_box .alert_btn_confirm {
+    border: 0;
+    border-radius: 0.25em;
+    background: initial;
+    background-color: #7066e0;
+    color: #fff;
+    font-size: 1em;
+    display: inline-block;
+    cursor: pointer;
+    margin: 0.3125em;
+    padding: 0.625em 1.1em;
+    transition: box-shadow .1s;
+    box-shadow: 0 0 0 3px transparent;
+    font-weight: 500;
+}
+
+@keyframes alert-show {
+    0% {
+        transform: scale(.7);
+    }
+    45% {
+        transform: scale(1.05);
+    }
+    80% {
+        transform: scale(.95);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
