홈화면 업로드

--- a/front/css/home.css
+++ b/front/css/home.css
@@ -1,1 +1,24 @@
 @import 'common.css';
+
+.home_container .home_row_box {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+}
+
+.home_container .home_row_box .home_box {
+    width: 30%;
+    height: 300px;
+    background-color: #F6F6F6;
+    padding: 30px 0 0 30px;
+}
+
+.home_container .home_row_box .home_box_title {
+    font-weight: 900;
+    font-size: 50px;
+}
+
+.home_container .home_row_box .home_box_content {
+    font-size: 25px;
+    margin-top: 10px;
+}
