--- a/front/css/header.css
+++ b/front/css/header.css
@@ -11,10 +11,15 @@
     font-weight: bold;
 }
 
-.header .header_point {
+.header .header_left {
     position: absolute;
     left: 30px;
     top: 60px;
+    display: flex;
+}
+
+.header .header_point {
+    margin-left: 20px;
 }
 
 .header .header_right {
