--- a/public/css/missing.css
+++ b/public/css/missing.css
@@ -307,28 +307,25 @@ body {
         opacity: 1;
     }
 }
-/*!**********************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./front/css/home.css ***!
-  \**********************************************************************/
-.home_container .home_row_box {
-    display: flex;
-    justify-content: space-evenly;
+/*!*************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./front/css/missing.css ***!
+  \*************************************************************************/
+.missing_container .map {
+    width: 100%;
+    height: 500px;
     margin-top: 50px;
 }
 
-.home_container .home_row_box .home_box {
-    width: 30%;
-    height: 300px;
-    background-color: #F6F6F6;
-    padding: 30px 0 0 30px;
+.missing_container .if_content {
+    width: 174px;
 }
 
-.home_container .home_row_box .home_box_title {
-    font-weight: 900;
-    font-size: 50px;
-}
-
-.home_container .home_row_box .home_box_content {
-    font-size: 25px;
-    margin-top: 10px;
+.missing_container .if_content .close {
+    position: absolute;
+    text-align: center;
+    top: 0px;
+    right: 0px;
+    width: 35px;
+    background-color: #2AC1BC;
+    color: white;
 }
