--- a/front/css/food.css
+++ b/front/css/food.css
@@ -13,7 +13,7 @@
     height: 50px;
     line-height: 50px;
     background-color: #E9EAEC;
-    border-radius: 5px;
+    border-radius: 10px;
     width: 90%;
     display: flex;
 }
@@ -33,11 +33,12 @@
     background-size: 100% 100%;
     margin-left: 10px;
     margin-top: 5px;
+    opacity: 0.5;
 }
 
 .food_container .top .search_box .search_input {
-    height: 50px;
-    width: 100%;
+    height: 48px;
+    width: 90%;
     margin-left: 10px;
     background-color: #E9EAEC;
     border: none;
