--- a/front/css/home.css
+++ b/front/css/home.css
@@ -11,6 +11,7 @@
     height: 300px;
     background-color: #F6F6F6;
     padding: 30px 0 0 30px;
+    cursor: pointer;
 }
 
 .home_container .home_row_box .home_box_title {
