--- a/front/css/common.css
+++ b/front/css/common.css
@@ -24,6 +24,16 @@ input:focus, textarea:focus {
     visibility: hidden;
 }
 
+.btn {
+    background-color: #2AC1BC;
+    border-radius: 10px;
+    color: white;
+    padding: 0 10px;
+    cursor: pointer;
+    z-index: 9999;
+    display: inline-block;
+}
+
 /* alert css */
 
 .alert_container {
