--- a/front/css/foodUpload.css
+++ b/front/css/foodUpload.css
@@ -23,6 +23,10 @@
     margin-bottom: 20px;
 }
 
+.foodUpload_container .uploaded_title_box .upload_btn {
+    float: right;
+}
+
 .show_file_upload::after {
     content: "";
     display: block;
@@ -33,6 +37,7 @@
     position: relative;
     float: left;
     border: 3px solid transparent;
+    height: 300px;
 }
 
 .show_file_upload .drag_div img {
@@ -85,7 +90,7 @@
     border: 6px solid;
     border-color: transparent transparent #0e726f transparent;
     top: -7px;
-    left: 48px;
+    left: 60px;
 }
 
 .show_file_upload .drag_div .rep_box .rep {
@@ -111,6 +116,7 @@
     caret-color: #FC630F;
     font-size: 1rem;
     line-height: 1.3;
+    font-family: "Segoe UI",Helvetica,Arial,sans-serif;
 }
 
 .upload_text_box .upload_text_div {
@@ -120,6 +126,7 @@
     left: 0;
     padding: 5px;
     z-index: -1;
+    font-family: "Segoe UI",Helvetica,Arial,sans-serif;
 }
 
 .upload_text_box .upload_text_div .hashtag {
@@ -157,4 +164,10 @@
 .foodUpload_container .hashtag_box .get_tag {
     cursor: pointer;
     border-bottom: 1px solid #dbdbdb;
+}
+
+@media (max-width:1000px) {
+    .upload_text_box .upload_text_div {
+        font-size: 2.5rem;
+    }    
 }
